fixed spacing for home page and contact page

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .contact_content {
-    margin: 150px auto;
+    margin: 210px auto;
     width: 70%;
     text-align: center;
     line-height: 30px;
